src/test/deca/context/invalid/created/string-in-float.deca
//Tentative d'affectation d'une valeur à une variable de type différent
{
	float a = "coucou";
}